[package]
name = "fx_sim_agg_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
futures = "0.3"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
chrono = "0.4.41"
log = "0.4"
log4rs = "1"
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = "0.32.0"
egui_grid = "0.5.1"